[FIXES-1] Fix alignment issue for cancel friendship request button icon  inside single profile header

--- a/src/bp-templates/bp-nouveau/readylaunch/css/main.css
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/main.css
@@ -11256,6 +11256,12 @@ input.bb-rl-zoom-slider::-moz-range-progress {
   content: "\e182";
 }
 
+.bb-rl-member-header-actions button.friendship-button i {
+  max-height: 20px;
+  display: inline-flex;
+  align-items: center;
+}
+
 .bb-rl-primary-actions {
   margin-left: auto;
 }
