--- a/src/bp-templates/bp-nouveau/readylaunch/css/members.css
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/members.css
@@ -477,6 +477,12 @@
   content: "\e182";
 }
 
+.bb-rl-member-header-actions button.friendship-button i {
+  max-height: 20px;
+  display: inline-flex;
+  align-items: center;
+}
+
 .bb-rl-primary-actions {
   margin-left: auto;
 }
