--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/members/_members.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/members/_members.scss
@@ -273,6 +273,15 @@
 	}
 }
 
+.bb-rl-member-header-actions {
+
+	button.friendship-button i {
+		max-height: 20px;
+		display: inline-flex;
+		align-items: center;
+	}
+}
+
 .bb-rl-primary-actions {
 	margin-left: auto;
 
